--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -81,6 +81,11 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
+    buildFeatures {
+        buildConfig true
+    }
+
     signingConfigs {
         debug {
             storeFile file('debug.keystore')
@@ -120,4 +125,4 @@ dependencies {
     }
 }
 
-apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
