--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DanParkApp",
+  "name": "danpark-app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,8 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.5.1",
+    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-community/geolocation": "^3.0.6",
+    "@react-native-voice/voice": "^3.2.4",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^7.3.4",
+    "@tanstack/react-query": "^4.36.1",
+    "axios": "^1.5.1",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-background-geolocation": "^4.13.5",
+    "react-native-gesture-handler": "^2.13.4",
+    "react-native-maps": "1.3.2",
+    "react-native-permissions": "^3.10.1",
+    "react-native-reanimated": "^3.5.4",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.25.0",
+    "react-native-toast-message": "^2.1.6",
+    "react-native-vector-icons": "^10.0.0",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,6 +41,7 @@
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
